<resources>
    <string name="app_name">ZHDaily</string>
    <string name="home_page">首页</string>
    <string name="add">添加</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="login_in">请登录</string>
    <string name="my_favorite">我的收藏</string>
    <string name="offline_download">离线下载</string>
    <string name="night_mode">夜间模式</string>
    <string name="setting">设置选项</string>
    <string name="collection">收藏</string>
    <string name="today_news">今日新闻</string>
    <string name="commend">评论</string>
    <string name="praise">赞</string>
    <string name="editors">主编</string>
    <string name="welcome_text">不止3次 不止7分钟</string>
    <string name="multipic">多图</string>
    <string name="comment">评论</string>
    <string name="reply">回复</string>
    <string name="copy">复制</string>
    <string name="report">举报</string>
    <string name="agree">赞同</string>
    <string name="empty_view">空视图</string>
    <string name="long_comment_zero">深度长评虚位以待</string>
    <string name="about_introduce">随时阅-日报想阅就阅</string>
    <string name="about">关于</string>
    <string name="open_source">Open Source</string>
    <string name="me">我</string>
    <string name="butterknife">butterknife</string>
    <string name="butterknife_url">https://github.com/JakeWharton/butterknife</string>
    <string name="rxjava">Rxjava</string>
    <string name="rxjava_url">https://github.com/ReactiveX/RxJava</string>
    <string name="rxandroid">Rxandroid</string>
    <string name="rxandroid_url">https://github.com/ReactiveX/RxAndroid</string>
    <string name="okhttp">Okhttp</string>
    <string name="okhttp_url">https://github.com/square/okhttp</string>
    <string name="retrofit">Retrofit</string>
    <string name="retrofit_url">https://github.com/square/retrofit</string>
    <string name="glide">Glide</string>
    <string name="glide_url">https://github.com/bumptech/glide</string>
    <string name="fresco">Fresco</string>
    <string name="fresco_url">https://github.com/facebook/fresco</string>
    <string name="convenientbanner">Convenientbanner</string>
    <string name="convenientbanner_url">https://github.com/saiwu-bigkoo/Android-ConvenientBanner</string>
    <string name="android_lite_orm">android-lite-orm</string>
    <string name="android_lite_orm_url">https://github.com/litesuits/android-lite-orm</string>
    <string name="introduce">介绍</string>
    <string name="introduce_text">『随时阅』是一款仿照『知乎日报』的休闲阅读应用。</string>
    <string name="explain">说明</string>
    <string name="explain_text">引用的部分开源库（如 Fresco ）是没有必要的，纯粹为了个人练习。\n所有数据均来自『知乎日报』,若被告知需停止共享与使用，本人会立即删除该项目。</string>
    <string name="circleimageview">Circleimageview</string>
    <string name="https_github_com_hdodenhof_circleimageview">https://github.com/hdodenhof/CircleImageView</string>
    <string name="ben">Ben</string>
    <string name="android_developer">Android Developer</string>
    <string name="me_github_url">Github: https://github.com/bennnnnnnnn</string>
    <string name="email">E-mail: zhoubangquan1992@gmail.com</string>
</resources>
