<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/collecion_item"
        android:icon="@drawable/bell_icon"
        android:orderInCategory="99"
        android:title="@string/collection"
        app:showAsAction="always" />

    <item
        android:id="@+id/favorite_icon"
        android:icon="@drawable/favorite_icon"
        android:orderInCategory="100"
        android:title="@string/collection"
        app:showAsAction="always" />

    <item
        android:id="@+id/mode_item"
        android:orderInCategory="99"
        android:title="@string/night_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/setting_item"
        android:orderInCategory="100"
        android:title="@string/setting"
        app:showAsAction="never" />
</menu>