<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:paddingBottom="3dp"
    android:paddingTop="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/agree_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:text="@string/agree"
            android:textColor="@color/textColor"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/report_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:text="@string/report"
            android:textColor="@color/textColor"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/copy_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:text="@string/copy"
            android:textColor="@color/textColor"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/reply_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:text="@string/reply"
            android:textColor="@color/textColor"
            android:textSize="14sp" />

    </LinearLayout>

</RelativeLayout>